--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "async": "~0.2.9"
   },
   "devDependencies": {
-    "mocha": "~1.14.0",
+    "grunt": "^0.4.5",
+    "grunt-available-tasks": "^0.5.0",
+    "grunt-bump": "0.0.15",
+    "grunt-jsbeautifier": "^0.2.7",
+    "grunt-mocha-test": "^0.11.0",
+    "jit-grunt": "^0.8.0",
     "should": "~2.0.2",
-    "async": "~0.2.9",
-    "js-beautify": "~1.4.2"
-
+    "time-grunt": "^0.4.0"
   }
 }
