--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "email": "dev@digitallyseamless.com",
     "url": "http://digitallyseamless.com"
   },
-  "contributors": [{
-    "name": "Mirco Zeiss",
-    "email": "mirco.zeiss@gmail.com",
-    "twitter": "zeMirco"
-  }, {
-    "name": "Cody Mize",
-    "email": "me@codymize.com",
-    "url": "http://codymize.com"
-  }],
+  "contributors": [
+    {
+      "name": "Mirco Zeiss",
+      "email": "mirco.zeiss@gmail.com",
+      "twitter": "zeMirco"
+    },
+    {
+      "name": "Cody Mize",
+      "email": "me@codymize.com",
+      "url": "http://codymize.com"
+    }
+  ],
   "bin": {
     "json2csv": "./bin/json2csv.js"
   },
@@ -38,9 +41,9 @@
     "format": "grunt format"
   },
   "dependencies": {
-    "commander": "~1.0.5",
-    "cli-table": "~0.2.0",
-    "async": "~0.2.9"
+    "async": "^0.9.0",
+    "cli-table": "^0.3.0",
+    "commander": "^2.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -49,7 +52,7 @@
     "grunt-jsbeautifier": "^0.2.7",
     "grunt-mocha-test": "^0.11.0",
     "jit-grunt": "^0.8.0",
-    "should": "~2.0.2",
+    "should": "^4.0.4",
     "time-grunt": "^0.4.0"
   }
 }
